--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ section.border {
 
 /* Com flor */
 section#flower-image {
-    background: black url(imagens/background001.jpg) right center no-repeat fixed;
+    background: black url(imagens/background001.jpg) center center no-repeat fixed;
     background-size: cover;
 }
 
