--- a/style.css
+++ b/style.css
@@ -65,17 +65,11 @@ main section {
     padding: 20px;
 }
 
-/* Que antecipa a imagem */
-section.border {
-    box-shadow: 0px 5px 12px 8px rgba(0, 0, 0, 0.304);
-    position: relative;
-    z-index: 1;
-}
-
 /* Com flor */
 section#flower-image {
     background: black url(imagens/background001.jpg) center center no-repeat fixed;
     background-size: cover;
+    box-shadow: inset 0px 8px 12px 0px rgba(0, 0, 0, 0.282);
 }
 
 section#flower-image p {
@@ -83,13 +77,14 @@ section#flower-image p {
     color: white;
     background: rgba(15, 15, 15, 0.619);
     padding: 4px;
-    text-shadow: 3px 3px 8px black;
+    text-shadow: 3px 3px 8px  rgba(0, 0, 0, 0.282);
 }
 
 /* Com Livro */
 section#book-image {
     background: black url(imagens/background002.jpg) left center no-repeat fixed;
     background-size: cover;
+    box-shadow: inset 0px 8px 12px 0px rgba(0, 0, 0, 0.282);
 }
 
 section#book-image p {
